# src/entitys/todoList.entity.ts
@@ -1,25 +1,26 @@
-import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, OneToMany } from "typeorm";
-import { Project } from "./project.entity";
-import { User } from "./user.entity";
-import { Task } from "./task.entity";
+// import { Entity, Generated, Column, ManyToOne, OneToMany, PrimaryColumn } from "typeorm";
+// import { Project } from "./project.entity";
+// import { User } from "./user.entity";
+// import { Task } from "./task.entity";
 
-@Entity()
-export class TodoList {
-  @PrimaryGeneratedColumn()
-  id: number;
+// @Entity()
+// export class TodoList {
+//   @PrimaryColumn()
+//   @Generated("uuid")
+//   id: number;
 
-  @Column()
-  name: string;
+//   @Column()
+//   name: string;
 
-  @Column()
-  description: string;
+//   @Column()
+//   description: string;
 
-  @ManyToOne(type => Project, project => project.todoLists)
-  project: Project;
+//   @ManyToOne(type => Project, project => project.todoLists)
+//   project: Project;
 
-  @ManyToOne(type => User, user => user.todoLists)
-  user: User;
+//   @ManyToOne(type => User, user => user.todoLists)
+//   user: User;
 
-  @OneToMany(type => Task, task => task.todoList)
-  tasks: Task[];
-}
+//   @OneToMany(type => Task, task => task.todoList)
+//   tasks: Task[];
+// }
